# agentswarm-tools

./: .coverage 2  .env.example  .gitignore  .pre-commit-config.yaml  AUTONOMOUS_DEVELOPMENT_COMPLETE.md  AUTONOMOUS_DEVELOPMENT_STATUS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DEPRECATION_TIMELINE.md  DEVELOPMENT_COMPLETE_SUMMARY.md  DOCUMENTATION_GUIDE.md  Dockerfile  FINAL_TESTING_SUMMARY.md  FIXES_APPLIED.md  GOOGLE_SLIDES_TOOL_DELIVERY.md  IMPROVEMENT_SUGGESTIONS.md  LAUNCH.md  LICENSE  MIGRATION_GUIDE_v1.2.0.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_AUDIT_STATS.txt  READY_TO_LAUNCH.md  RELEASE_NOTES_v1.1.0.md  SECURITY_AUDIT.md  STATUS.md  SUPABASE_INTEGRATION_REPORT.md  SYSTEM_READINESS.md  TESTING_PLAN.md  TEST_REPORT.md  TEST_REPORT_v2.0.0.md  TEST_RESULTS.md  TEST_RESULTS_FINAL.md  TOOLS_CATALOG.md  TOOLS_DOCUMENTATION.md  TOOLS_INDEX.md  (+23 more)
.github/workflows/: lint.yml  release.yml  security.yml  test.yml
.venv312/: pyvenv.cfg
benchmarks/: async_vs_sync_benchmark.py  simple_async_benchmark.py
cli/: __init__.py  completion.py  history.py  interactive.py  main.py  version.py  workflow.py  workflow_builder.py
cli/commands/: __init__.py  completion.py  config.py  history.py  info.py  interactive.py  list.py  performance.py  run.py  sdk.py  test.py  validate.py  workflow.py
cli/utils/: __init__.py  formatters.py  interactive.py  validators.py
config/: __init__.py  api_keys.py  defaults.py  validators.py
data/analytics/: 2025-11-20.jsonl
data/tool_specs/: aidrive_tool.json  analyze_media_content.json  ask_for_clarification.json  audio_generation.json  audio_transcribe.json  bash_tool.json  batch_understand_videos.json  crawler.json  create_agent.json  downloadfilewrapper_tool.json  email_draft.json  extract_audio_from_video.json  file_format_converter.json  financial_report.json  generate_area_chart.json  generate_bar_chart.json  generate_column_chart.json  generate_dual_axes_chart.json  generate_fishbone_diagram.json  generate_flow_diagram.json  generate_histogram_chart.json  generate_line_chart.json  generate_mind_map.json  generate_network_graph.json  generate_pie_chart.json  generate_radar_chart.json  generate_scatter_chart.json  generate_treemap_chart.json  generate_word_cloud_chart.json  gmail_read.json  gmail_search.json  google_calendar_create_event_draft.json  google_calendar_list.json  google_product_search.json  image_generation.json  image_search.json  maps_search.json  merge_audio.json  multiedit_tool.json  notion_read.json  (+21 more)
docs/archive/: TEST_COVERAGE_REPORT.md  TEST_HISTORY.md  TEST_IMPROVEMENT_SUMMARY.md  TEST_SUMMARY.md
docs/guides/: AGENCY_SWARM_INTEGRATION.md  ASYNC_TOOLS.md  BATCH_PROCESSING.md  CACHING.md  CLI_GUIDE.md  COMMUNICATION_TOOLS_MIGRATION.md  FRAMEWORK_FEATURES.md  LITELLM_GUIDE.md  LITELLM_INTEGRATION.md  MCP_INTEGRATION_GUIDE.md  MCP_SERVER.md  PERFORMANCE_MONITORING.md  PIPELINES.md  PRE_COMMIT_SETUP.md  SDK_GUIDE.md  TESTING_GUIDE.md  TWILIO_INTEGRATION_GUIDE.md  WORKFLOWS.md
docs/references/: QUICK_REFERENCE.md  TOOLS_CATALOG.md  TOOLS_DOCUMENTATION.md  TOOLS_INDEX.md
docs/tutorials/: DOCUMENTATION_GUIDE.md  QUICKSTART.md  TOOL_EXAMPLES.md
examples/: claude_desktop_config.json  pipeline_examples.py
examples/workflows/: README.md  batch_processing.json  content_generation.json  data_visualization.json  email_automation.json  research-workflow.json  (+3 more)
mcp_server/: QUICK_START.md  README.md  __init__.py  config.json  config.py  server.py  test_mcp.py  tools.py
reports/: CLEANUP_REPORT_v2.0.0.md  CONSOLIDATION_DELIVERABLES.md  CONSOLIDATION_SUMMARY.md  MCP_IMPLEMENTATION_REPORT.md  PHASE_4_2_IMPLEMENTATION_REPORT.md  README.md  SDK_IMPLEMENTATION_REPORT.md  TOOL_README_AUDIT_SUMMARY.md
scripts/: CONVERSION_REPORT.md  README.md  __init__.py  accelerate_development.py  agent_worker.py  audit_tools.py  autonomous_orchestrator.py  code_generator.py  continuous_documenter.py  continuous_tester.py  convert_print_to_logging.py  convert_prints_to_logging.py  dashboard_server.py  generate_documentation.py  generate_readmes.py  init_database.py  monitor_progress.py  pre_push_cleanup.sh  queue_remaining_tools.py  test_generator.py  test_performance_monitoring.py  test_sdk_demo.py  tool_generator.py  tool_specifications.py
sdk/: __init__.py  docs_generator.py  generator.py  test_generator.py  validator.py
shared/: __init__.py  analytics.py  async_base.py  async_batch.py  base.py  batch.py  cache.py  config.py  dashboard.py  errors.py  http_client.py  llm_client.py  logging.py  monitoring.py  pipeline.py  registry.py  security.py  workflow.py
test-results/: junit-complete.xml  junit-final.xml  junit-full.xml  junit.xml
tools/: __init__.py
(+790 files in other folders)
